refactor and reorganize main and test packages